--- a/app/src/main/res/layout/activity_clock.xml
+++ b/app/src/main/res/layout/activity_clock.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <com.example.purramid.thepurramid.clock.ClockView
+    <com.example.purramid.purramidtime.clock.ClockView
         android:id="@+id/clockView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
