--- a/app/src/main/res/layout/view_floating_clock_digital.xml
+++ b/app/src/main/res/layout/view_floating_clock_digital.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:background="@android:color/transparent"> <com.example.purramid.thepurramid.ClockView
+    android:background="@android:color/transparent"> <com.example.purramid.purramidtime.ClockView
         android:id="@+id/digitalClockView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
