--- a/app/src/main/res/xml/purramid_widget_info.xml
+++ b/app/src/main/res/xml/purramid_widget_info.xml
@@ -4,7 +4,7 @@
     android:minHeight="80dp"
     android:updatePeriodMillis="0"
     android:previewImage="@mipmap/ic_launcher" android:initialLayout="@layout/widget_layout"
-    android:configure="com.example.purramid.thepurramid.WidgetConfigActivity"
+    android:configure="com.example.purramid.purramidtime.WidgetConfigActivity"
     android:resizeMode="none"
     android:widgetCategory="home_screen"
     android:description="@string/app_widget_description">
