--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_height="96dp"
             android:layout_gravity="center"
             android:scaleType="fitCenter"
-            tools:srcCompat="@mipmap/ic_launcher_foreground" />
+            tools:srcCompat="@mipmap/ic_launcher" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="96dp"
