--- a/app/src/main/res/layout/fragment_timer_settings.xml
+++ b/app/src/main/res/layout/fragment_timer_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".timers.ui.TimersSettingsFragment">
+    tools:context=".timer.ui.TimerSettingsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
