--- a/app/src/main/res/layout/dialog_music_url.xml
+++ b/app/src/main/res/layout/dialog_music_url.xml
@@ -24,6 +24,17 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/music_url"
+            android:textAppearance="?attr/textAppearanceTitleLarge"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <ImageButton
             android:id="@+id/buttonClose"
             android:layout_width="48dp"
@@ -62,13 +73,15 @@
                 android:text="https://"
                 android:textColor="@android:color/darker_gray"
                 android:textAppearance="?attr/textAppearanceBodyLarge"
-                android:layout_marginEnd="4dp"/>
+                android:layout_marginEnd="4dp"
+                tools:ignore="HardcodedText" />
 
             <EditText
                 android:id="@+id/editTextUrl"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:layout_weight="1"
+                android:autofillHints=""
                 android:hint="@string/enter_url_hint"
                 android:inputType="textUri"
                 android:maxLines="1"
