--- a/app/src/main/res/layout/fragment_timer_settings.xml
+++ b/app/src/main/res/layout/fragment_timer_settings.xml
@@ -111,47 +111,6 @@
             </LinearLayout>
         </LinearLayout>
 
-        <com.google.android.material.materialswitch.MaterialSwitch
-            android:id="@+id/switchShowCentiseconds"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/hundredths"
-            android:checked="true"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/layoutCountdownSettings"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-        <!-- Stopwatch specific settings -->
-        <LinearLayout
-            android:id="@+id/layoutStopwatchSettings"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/switchShowCentiseconds"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <com.google.android.material.materialswitch.MaterialSwitch
-                android:id="@+id/switchLapTime"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/lap"
-                android:checked="false"/>
-
-            <com.google.android.material.materialswitch.MaterialSwitch
-                android:id="@+id/switchSounds"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/sounds"
-                android:checked="false"
-                android:layout_marginTop="8dp"/>
-
-        </LinearLayout>
-
         <!-- Nest Timer toggle (only for countdown) -->
         <com.google.android.material.materialswitch.MaterialSwitch
             android:id="@+id/switchNestTimer"
@@ -161,7 +120,7 @@
             android:checked="false"
             android:visibility="gone"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/layoutStopwatchSettings"
+            app:layout_constraintTop_toBottomOf="@id/switchPlaySoundOnEnd"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
