--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="timer_normal_digit">#757575</color>
     <color name="timer_arrow_color">#424242</color>
     <color name="timer_active_color">#1976D2</color>
+    <color name="icon_inactive">#9E9E9E</color>
 </resources>
