Updated ViewModel move to Activity

--- a/app/src/main/res/layout/dialog_music_url.xml
+++ b/app/src/main/res/layout/dialog_music_url.xml
@@ -89,7 +89,7 @@
                 android:paddingHorizontal="8dp"/>
 
             <ImageButton
-                android:id="@+id/buttonPlay"
+                android:id="@+id/buttonPlayPause"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:src="@drawable/ic_play"
